# barcelona-trees

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  barcelona-trees.pro  gpl.rtf  lconvert.pri  openssl.pri  q7zip.pri
barnatrees/: CMakeLists.txt  Info.plist.app  barnatrees.cmd  barnatrees.desktop  barnatrees.pro  barnatrees.qml  barnatrees.qrc  barnatrees.rc.in  barnatrees.sh  basemodel.cpp  data.qrc  main.cpp  plantmodel.h  qtquickcontrols2.conf
barnatrees/android/: AndroidManifest.xml  build.gradle  lint.xml
barnatrees/android/res/drawable/: splash.xml
barnatrees/images/: barnatrees.icns  images.qrc
barnatrees/images/icons/example/: index.theme
barnatrees/qml/: AboutDialog.qml  BalloonTip.qml  DetailsPage.qml  GenderSearchDialog.qml  HomePage.qml  MainWindow.qml  Marker.qml  MsgDialog.qml  ResultsPage.qml  SettingsDialog.qml  SpecieSearchDialog.qml  SpecimenDialog.qml  StreetSearchDialog.qml  qml.qrc  qtquickcontrols2.conf
barnatrees/src/: basemodel.cpp  basemodel.h  dropboxdownloader.cpp  dropboxdownloader.h  gendermodel.cpp  gendermodel.h  main.cpp  plantmodel.cpp  plantmodel.h  plantproxymodel.cpp  plantproxymodel.h  speciesmodel.cpp  speciesmodel.h  splashwindow.cpp  splashwindow.h  streetlistmodel.cpp  streetlistmodel.h  summarymodel.cpp  summarymodel.h  webdownloader.cpp  webdownloader.h
barnatrees/translations/: barnatrees_ca.ts  barnatrees_en.ts  barnatrees_es.ts  barnatrees_nl.ts  translations.qrc
cmake/: SCMRevision.cmake  TranslationUtils.cmake
docs/: barnatrees.txt  index.md
treedbcreator/: CMakeLists.txt  downloadmanager.cpp  downloadmanager.h  jsonparser.cpp  jsonparser.h  main.cpp  openssl.pri  readme.md  treedata.cpp  treedata.h  treedbcreator.pro  xmlparser.cpp  xmlparser.h
windowsmsi/: BarcelonaTrees.sln  BarcelonaTrees.wixproj  Product.wxs
